{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 63,
  "lineage": "3d1e7867-08ce-5a3a-a60c-9a5070f93321",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkInterfaces/infy-dev-bastion-nic",
            "internal_domain_name_suffix": "qr51mhz3nerubi2d2wydfnwfpb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.100.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/publicIPAddresses/infy-dev-bastion-pip",
                "subnet_id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-14-C5-87",
            "name": "infy-dev-bastion-nic",
            "private_ip_address": "10.100.1.4",
            "private_ip_addresses": [
              "10.100.1.4"
            ],
            "resource_group_name": "infy-dev-RG",
            "virtual_machine_id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Compute/virtualMachines/infy-dev-bastion-machine"
          },
          "dependencies": [
            "azurerm_public_ip.bastionip",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.bastion",
            "azurerm_virtual_network.myrg-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "App",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkSecurityGroups/infy-dev-App-nsg",
            "location": "eastus",
            "name": "infy-dev-App-nsg",
            "resource_group_name": "infy-dev-RG",
            "security_rule": [],
            "tags": {
              "environment": "Testing"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkSecurityGroups/infy-dev-db-nsg",
            "location": "eastus",
            "name": "infy-dev-db-nsg",
            "resource_group_name": "infy-dev-RG",
            "security_rule": [],
            "tags": {
              "environment": "Testing"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkSecurityGroups/infy-dev-web-nsg",
            "location": "eastus",
            "name": "infy-dev-web-nsg",
            "resource_group_name": "infy-dev-RG",
            "security_rule": [],
            "tags": {
              "environment": "Testing"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastionip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/publicIPAddresses/infy-dev-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.172.150.135",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "infy-dev-bastion-pip",
            "resource_group_name": "infy-dev-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Testing"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "App",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.30.0/24",
            "address_prefixes": [
              "10.100.30.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-App-subnet",
            "name": "infy-dev-App-subnet",
            "resource_group_name": "infy-dev-RG",
            "virtual_network_name": "infy-dev-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.myrg-vnet",
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.50.0/24",
            "address_prefixes": [
              "10.100.50.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-api-subnet",
            "name": "infy-dev-api-subnet",
            "resource_group_name": "infy-dev-RG",
            "virtual_network_name": "infy-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "azurerm_virtual_network.myrg-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.1.0/24",
            "address_prefixes": [
              "10.100.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-subnet",
            "name": "infy-dev-subnet",
            "resource_group_name": "infy-dev-RG",
            "virtual_network_name": "infy-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "azurerm_virtual_network.myrg-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.40.0/24",
            "address_prefixes": [
              "10.100.40.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-db-subnet",
            "name": "infy-dev-db-subnet",
            "resource_group_name": "infy-dev-RG",
            "virtual_network_name": "infy-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "azurerm_virtual_network.myrg-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.20.0/24",
            "address_prefixes": [
              "10.100.20.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-web-subnet",
            "name": "infy-dev-web-subnet",
            "resource_group_name": "infy-dev-RG",
            "virtual_network_name": "infy-dev-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.myrg-vnet",
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "App",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-App-subnet",
            "network_security_group_id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkSecurityGroups/infy-dev-App-nsg",
            "subnet_id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-App-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "azurerm_subnet.App",
            "azurerm_virtual_network.myrg-vnet",
            "azurerm_network_security_group.App"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-db-subnet",
            "network_security_group_id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkSecurityGroups/infy-dev-db-nsg",
            "subnet_id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-db-subnet"
          },
          "dependencies": [
            "azurerm_virtual_network.myrg-vnet",
            "azurerm_network_security_group.db",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-web-subnet",
            "network_security_group_id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkSecurityGroups/infy-dev-web-nsg",
            "subnet_id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-web-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_public_ip.bastionip",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.bastion",
            "azurerm_subnet.web",
            "azurerm_virtual_network.myrg-vnet",
            "azurerm_linux_virtual_machine.bastion",
            "azurerm_network_interface.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myrg-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/16"
            ],
            "dns_servers": [
              "10.100.0.4",
              "10.100.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1fb67f84-693d-4023-a383-e5b032b6c579",
            "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet",
            "location": "eastus",
            "name": "infy-dev-vnet",
            "resource_group_name": "infy-dev-RG",
            "subnet": [
              {
                "address_prefix": "10.100.1.0/24",
                "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-subnet",
                "name": "infy-dev-subnet"
              },
              {
                "address_prefix": "10.100.20.0/24",
                "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-web-subnet",
                "name": "infy-dev-web-subnet",
                "security_group": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkSecurityGroups/infy-dev-web-nsg"
              },
              {
                "address_prefix": "10.100.30.0/24",
                "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-App-subnet",
                "name": "infy-dev-App-subnet",
                "security_group": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkSecurityGroups/infy-dev-App-nsg"
              },
              {
                "address_prefix": "10.100.40.0/24",
                "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-db-subnet",
                "name": "infy-dev-db-subnet",
                "security_group": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/networkSecurityGroups/infy-dev-db-nsg"
              },
              {
                "address_prefix": "10.100.50.0/24",
                "id": "/subscriptions/10e2e0d3-0472-4396-8ee8-6526a64165db/resourceGroups/infy-dev-RG/providers/Microsoft.Network/virtualNetworks/infy-dev-vnet/subnets/infy-dev-api-subnet",
                "name": "infy-dev-api-subnet"
              }
            ],
            "tags": {
              "environment": "var.env"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    }
  ]
}